Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-22921

rc/libs/qtcreatorcdbext/extensioncontext.cpp:432: bad parameter order ?

XMLWordPrintable

    • 75a0340a5338a2f31af96b49ef1a85a475494ac0 (qt-creator/qt-creator/4.10)

      qt-creator-opensource-src-4.10.0/src/libs/qtcreatorcdbext/extensioncontext.cpp:432:36: warning: Function 'report' argument order different: declaration 'code, remainingChunks, token, serviceName, Format, ' definition 'code, token, remainingChunks, serviceName, Format, ' [funcArgOrderDifferent]

        For Gerrit Dashboard: QTCREATORBUG-22921
        # Subject Branch Project Status CR V

            davschul David Schulz
            dcb David Binderman
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes