cdbext: fix arg order in function declaration

Fixes: QTCREATORBUG-22921
Change-Id: I1fa94565e550a5ca1fa68fc032136fd42fa4972f
Reviewed-by: Christian Stenger <christian.stenger@qt.io>